[package]
name = "liteyear-macro"
version = "0.0.0"
edition = "2021"

[lib]
proc-macro = true

[features]
default = []
bench = ["syn", "quote", "proc-macro2"]

[dependencies]
syn = { version = "2.0", optional = true }
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }
